--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="default_text_color">#FFFFFF</color>
+    <color name="contentBackground">#FFF</color>
+    <color name="colorAccent">#D81B60</color>
 </resources>
